style.css
.title-with-icon-item {
    position: relative;
    
}
.menu-item::after {
  content: '';
  display: inline-block;
  margin-left: 140px;
  border: solid #2a5eb8; /* couleur bleue proche de ton image */
  border-width: 0 2px 2px 0;
  padding: 4px;
  transform: rotate(-45deg);
  vertical-align: middle;
}

.menu-link {
    text-decoration: none;
    font-weight: bold;
    color: #333;
    padding: 10px 15px;
    display: block;
}

/* Style du sous-menu */
.submenu {
    
    display: none;
    position: absolute;
    background: white;
    list-style: none;
    padding: 10px 0;
    margin-left: 300px !important ;
    margin-top:-50px !important;
    width: 220px;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
    border-radius: 5px;
}

.submenu li {
    padding: 10px 15px;
    
}

.submenu li a {
    text-decoration: none;
    color: #333;
    display: block;
    transition: 0.3s;
}

.submenu li a:hover {
    background: #f8f9fa;
}

/* Affichage du sous-menu au survol */
.title-with-icon-item:hover .submenu {
    display: block;
}

/* Style du badge "New" */
.new-badge {
    background: red;
    color: white;
    font-size: 12px;
    padding: 2px 6px;
    border-radius: 3px;
    margin-left: 8px;
    font-weight: bold;
}

        .shake-btn {
    animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) infinite;
}
        @keyframes shake {
    0% {
        transform: translateX(0);
    }
    25% {
        transform: translateX(-5px);
    }
    50% {
        transform: translateX(5px);
    }
    75% {
        transform: translateX(-5px);
    }
    100% {
        transform: translateX(0);
    }
}

     .width-20{
     width:20%;
     margin:5px;
     }
@media (max-width: 768px){
      .width-20{
     width:50%;
     margin-bottom:8px;
     }
    
    }

.rts-pricing-plan .single-plan__content .buy__plan.btn__two {
  padding: 15px 0;
  border-radius: 4px;
  max-width: 260px;
  position: relative;
  left: 50%;
  transform: translateX(-50%);
}

.rts-pricing-plan {
  position: relative;
}
.rts-pricing-plan .single-plan {
  background: var(--color-white);
  padding: 60px;
  border-radius: 20px;
  position: relative;
  transition: all 0.3s ease;
  z-index: 1;
}
@media screen and (max-width: 768px) {
  .rts-pricing-plan .single-plan {
    padding: 30px;
  }
}
@media screen and (max-width: 1200px) {
  .rts-pricing-plan .single-plan {
    padding: 45px;
  }
}
.rts-pricing-plan .single-plan::after {
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  content: "";
  background-image: url(../images/pricing/plan__hover__bg.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  z-index: -1;
  transition: all 0.3s ease;
  opacity: 0;
}
.rts-pricing-plan .single-plan::before {
  background: var(--pricing-single-bg);
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  content: "";
  opacity: 0;
  transition: all 0.3s ease;
  border-radius: inherit;
  z-index: -1;
}

.rts-pricing-plan .single-plan__content .plan-icon {
  margin-bottom: 40px;
  transition: all 0.3s ease;
}
.rts-pricing-plan .single-plan__content .plan-title {
  font-size: 24px;
  font-weight: var(--bold);
  color: var(--color-secondary);
  margin-bottom: 15px;
  display: inline-block;
  transition: all 0.3s ease;
  line-height: 1;
}
.rts-pricing-plan .single-plan__content .description {
  font-size: 15px;
  font-family: var(--font-secondary);
  margin-bottom: 0;
}
@media screen and (max-width: 576px) {
  .rts-pricing-plan .single-plan__content .description {
    line-height: 1.4;
  }
}
.rts-pricing-plan .single-plan__content .border-separator {
  margin: 40px 0;
  border-top: 1px solid #D9D9D9;
  transition: all 0.3s ease;
}
.rts-pricing-plan .single-plan__content .plan-feature__list {
  padding: 0;
  margin: 0;
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 30px;
}
.rts-pricing-plan .single-plan__content .plan-feature__list li {
  line-height: 1.2;
  font-weight: 600;
  font-family: var(--font-secondary);
  display: inline-flex;
}
.rts-pricing-plan .single-plan__content .plan-feature__list li span {
  margin-right: 10px;
}
.rts-pricing-plan .single-plan__content .plan-feature__list li span i {
  transition: var(--transition);
}
.rts-pricing-plan .single-plan__content .plan-feature__list li span i.fa-check {
  color: #00B67A;
}
.rts-pricing-plan .single-plan__content .plan-feature__list li span i.fa-xmark {
  color: #EB4242;
}
.rts-pricing-plan .single-plan__content .buy__plan {
  background: var(--color-primary);
  color: var(--color-white);
  font-weight: var(--semibold);
  margin-top: 50px;
  transition: var(--transition);
}
.rts-pricing-plan .single-plan__content .buy__plan:hover {
  background: var(--color-third) !important;
}
.rts-pricing-plan .single-plan__content .buy__plan.btn__two {
  padding: 15px 0;
  border-radius: 4px;
  max-width: 260px;
  position: relative;
  left: 50%;
  transform: translateX(-50%);
}
.rts-pricing-plan__tab {
  display: flex;
  gap: 40px;
  align-items: center;
  position: relative;
  z-index: 1;
  margin-bottom: 50px;
  justify-content: center;
}
.rts-pricing-plan__tab .tab__button {
  background: var(--color-white);
  box-shadow: 0px 4px 30px 0px #EDF5FF;
  padding: 5px;
  border-radius: 6px;
}
.rts-pricing-plan__tab .tab__button__item {
  display: flex;
  gap: 5px;
}
.rts-pricing-plan__tab .tab__button__item button {
  border-radius: 6px;
  padding: 10px 20px;
  text-transform: capitalize;
}
.rts-pricing-plan__tab .tab__button__item button.active {
  background: var(--color-primary);
  color: var(--color-white);
}
@media screen and (max-width: 576px) {
  .rts-pricing-plan__tab .discount {
    display: none;
  }
}
.rts-pricing-plan__tab .discount span.line {
  position: absolute;
  top: -15px;
  right: 25%;
}
@media screen and (max-width: 768px) {
  .rts-pricing-plan__tab .discount span.line {
    position: relative;
    top: -15px;
    left: -50px;
    z-index: -1;
  }
}
/* ... */

